# openmotion

./: .embed.local.toml  .gitignore  Cargo.toml  Makefile  README.md  memory.x
.cargo/: config
.github/workflows/: rust.yml
probe-target/: STM32F4_Series.yaml
schematic/OpenMotionMotorDriver/: OpenMotionMotorDriver.kicad_prl  OpenMotionMotorDriver.kicad_pro  OpenMotionMotorDriver.kicad_sch
src/: main.rs  panic_led.rs
src/config/: tools.rs
