[package]
name = "openmotion"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Glass <patrickglass@gmail.com>"]

[dependencies]
rtt-target = { version = "0.4" }
heapless = { version = "0.7.16", default-features = false }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.3"
embedded-hal = "^0.2.7"
panic-halt = "^0.2.0"
stm32f4xx-hal = { version = "0.17.1", features = ["stm32f407"] }

[dev-dependencies]
pretty_assertions = "1"

[profile.dev]
codegen-units = 1 # better optimizations and easier ELF to debug the debugger
debug = true      # default is `false`; using `true` is also OK as the symbols reside on the host platform, not the target
lto = false       # Link Time Optimizations for further size reduction

[profile.release]
debug = true    # default is `false`; using `true` is also OK as the symbols reside on the host platform, not the target
lto = true      # Link Time Optimizations for further size reduction
opt-level = "s" # turn on speed optimizations.
